# SimpleCmakeModules

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
cmake/: brutal-compiler-options.cmake  doxy.cmake  grind.cmake  sanitize.cmake  static-analysis.cmake
testing/: CMakeLists.txt  Makefile  README.md
testing/src/: CMakeLists.txt  main.cpp  second.cpp
testing/src/lib1/: lib1.cpp  lib1.hpp
